--- a/sugarcrm/styleguide/less/sugar.less
+++ b/sugarcrm/styleguide/less/sugar.less
@@ -328,6 +328,8 @@ border-right: 1px solid @grayLighter;
   -webkit-transition: all .2s linear;
      -moz-transition: all .2s linear;
           transition: all .2s linear;
+  filter:  ~"progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/badge_256.png',sizingMethod='scale')";
+  -ms-filter: ~"progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/badge_256.png',sizingMethod='scale')";
   }
 
 .navbar .navbar-inner {
